# divvy_trip_data_analysis

./: .gitignore  README.md  main.py  pyproject.toml
analysis_notebooks/: data_analyze.ipynb
utils/: __init__.py  download_divvy_files.sh
