[project]
name = "divvy-trip-dataanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandoc>=2.4",
    "plotly>=6.5.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
